[package]
name = "soroban-evm-bridge-pool"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
hex = "0.4.3"
soroban-sdk = { version = "20.3.1" }

[dev-dependencies]
soroban-sdk = { version = "20.3.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
